--- a/server/comment_server/package.json
+++ b/server/comment_server/package.json
@@ -5,7 +5,8 @@
     "main": "cloudbaserc.js",
     "dependencies": {
         "@cloudbase/node-sdk": "^2.7.1",
-        "blueimp-md5": "^2.19.0"
+        "blueimp-md5": "^2.19.0",
+        "dompurify": "^2.3.4"
     },
     "devDependencies": {
         "ejs": "^3.1.6",
