--- a/server/comment_server/package.json
+++ b/server/comment_server/package.json
@@ -6,7 +6,8 @@
     "dependencies": {
         "@cloudbase/node-sdk": "^2.7.1",
         "blueimp-md5": "^2.19.0",
-        "dompurify": "^2.3.4"
+        "dompurify": "^2.3.4",
+        "jsdom": "^16.0.0"
     },
     "devDependencies": {
         "ejs": "^3.1.6",
