--- a/server/comment_server/package.json
+++ b/server/comment_server/package.json
@@ -7,13 +7,13 @@
         "@cloudbase/node-sdk": "^2.7.1",
         "blueimp-md5": "^2.19.0",
         "dompurify": "^2.3.4",
-        "jsdom": "^16.0.0"
-    },
-    "devDependencies": {
+        "jsdom": "^16.0.0",
         "ejs": "^3.1.6",
         "node-uuid": "^1.4.8",
-        "nodemailer": "^6.4.8"
+        "nodemailer": "^6.4.8",
+        "bowser": "^2.11.0"
     },
+    "devDependencies": {},
     "author": "",
     "license": "ISC"
 }
