--- a/babel.config.json
+++ b/babel.config.json
@@ -6,6 +6,7 @@
     ],
     "plugins": [
         "@babel/plugin-transform-modules-commonjs",
-        "@babel/transform-runtime"
+        "@babel/transform-runtime",
+        "@vue/babel-plugin-jsx"
     ]
 }
