--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/plugin-transform-runtime": "^7.12.15",
     "@babel/preset-env": "^7.12.13",
     "@babel/runtime": "^7.16.3",
+    "@vue/babel-plugin-jsx": "^1.1.1",
     "@vue/compiler-sfc": "^3.2.22",
     "babel-loader": "^8.2.2",
     "babel-plugin-component": "^1.1.1",
