--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "less": "^3.11.1",
     "less-loader": "^6.1.0",
     "style-loader": "^1.2.1",
+    "svg-inline-loader": "^0.8.2",
+    "svg-sprite-loader": "^6.0.11",
     "to-string-loader": "^1.1.6",
     "vue-loader": "16.8.3",
     "webpack": "^5.63.0",
