--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "css-loader": "^3.5.3",
     "eslint": "7.32.0",
     "eslint-webpack-plugin": "^3.1.1",
+    "highlight.js": "^11.4.0",
     "html-webpack-plugin": "^5.5.0",
     "less": "^3.11.1",
     "less-loader": "^6.1.0",
