--- a/server/comment_server/package.json
+++ b/server/comment_server/package.json
@@ -11,7 +11,9 @@
         "ejs": "^3.1.6",
         "node-uuid": "^1.4.8",
         "nodemailer": "^6.4.8",
-        "bowser": "^2.11.0"
+        "bowser": "^2.11.0",
+        "marked": "^4.0.0",
+        "highlight.js": "^11.4.0"
     },
     "devDependencies": {},
     "author": "",
