--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "html-webpack-plugin": "^5.5.0",
     "less": "^3.11.1",
     "less-loader": "^6.1.0",
+    "mini-css-extract-plugin": "^2.5.2",
     "style-loader": "^1.2.1",
     "svg-inline-loader": "^0.8.2",
     "svg-sprite-loader": "^6.0.11",
