--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "b-comments",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "评论插件",
   "main": "./dist/index.min.js",
   "scripts": {
@@ -34,6 +34,7 @@
     "babel-plugin-component": "^1.1.1",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^3.5.3",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "eslint": "7.32.0",
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
