--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "@babel/runtime": "^7.16.3",
     "@vue/babel-plugin-jsx": "^1.1.1",
     "@vue/compiler-sfc": "^3.2.22",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-component": "^1.1.1",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^3.5.3",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "eslint": "7.32.0",
+    "eslint-plugin-vue": "^8.3.0",
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
     "less": "^3.11.1",
